# trading

./: .gitignore  FEATURES.md  README.md  complete_scan.csv  output.csv  pyproject.toml  requirements.txt  trades.csv  watchlist_results.csv
.github/: copilot-instructions.md
src/quant_trading_logic/: cli.py  dashboard.py
src/quant_trading_logic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quant_trading_logic/backtest/: analyzer.py  engine.py  journal.py
src/quant_trading_logic/data/: fetch.py  fundamentals.py
src/quant_trading_logic/reports/: csv_export.py  formatters.py
src/quant_trading_logic/risk/: positioning.py
src/quant_trading_logic/signals/: indicators.py  scanner.py  strategy.py
tests/: test_backtest.py  test_scanner.py  test_strategy.py
